--- a/build.yaml
+++ b/build.yaml
@@ -16,9 +16,9 @@ include:
 
 # Hillside 46
 #   Comment out below if you do not have this board, to save build time
-  - board: nrfmicro 52840
+  - board: nrfmicro 
     shield: hillside46_left
-  - board: nrfmicro 52840
+  - board: nrfmicro 
     shield: hillside46_right
 
 # Hillside 48
